# cejmastersheet

./: .env.example  .gitignore  .windsurfrules  AGENTS.md  BUG_FIXES_SUMMARY.md  CLAUDE.md  ExcelTransformer.spec  Haleon CEJ Master Spec Sheet 3.1.xlsx  README.md  RUN_ON_WINDOWS_Streamlit.md  config.py  excel_transformer.py  global_rules.md  pyproject.toml  requirements.txt  streamlit_app.py  test_basic_functionality.py  transformation_plan.md
.streamlit/: config.toml
cej_transformer/: __init__.py  config.py  logging_utils.py  parser.py  transformer.py  validator.py
docs/: transformation_plan.md
docs/24-11-25/: .session  24-11-25.md  PROJECT_STATUS.md  retrospective.md
docs/24-11-25/checkpoints/: 20251124-074703.json
docs/26-12-25/: .session  26-12-25.md  PROJECT_STATUS.md
docs/26-12-25/session/: notes.md
memory-bank/: activeContext.md  identified_issues_and_how_we_fixed_them.md  improvement_plan.md  progress.md
scripts/: __init__.py  excel_transformer.py  validation_script.py
